add second page home (nearly finished)

--- a/src/index.html
+++ b/src/index.html
@@ -133,36 +133,51 @@
             </div>
           </div>
         </div>
-        <div class='card-images'>
-          <div class='boxes'>
-            <img src='images/homePage/pizza-6.jpg' alt='image' />
-            <a href='#'><i class='fa-solid fa-heart' id="icons"></i></a>
-            <a href='#'><i class='fa-solid fa-share-nodes'id="icons"></i></a>
+        <div class="cards">
+          <div class='cards-img-wrapper'>
+            <img src='images/homePage/pizza-4.jpg' alt='home' />
+            <div class='icons'>
+              <i class='fa-solid fa-heart'></i>
+              <i class='fa-solid fa-share-nodes'></i>
+            </div>
           </div>
-          <div class='boxes'>
-            <img src='images/homePage/pizza-6.jpg' alt='image' />
-            <a href='#'><i class='fa-solid fa-heart' id="icons" ></i></a>
-            <a href='#'><i class='fa-solid fa-share-nodes' id="icons"></i></a>
+          <div class='cards-img-wrapper'>
+            <img src='images/homePage/pizza-5.jpg' alt='home' />
+            <div class='icons'>
+              <i class='fa-solid fa-heart'></i>
+              <i class='fa-solid fa-share-nodes'></i>
+            </div>
           </div>
-          <div class='boxes'>
-            <img src='images/homePage/pizza-6.jpg' alt='image' />
-            <a href='#'><i class='fa-solid fa-heart' id="icons"></i></a>
-            <a href='#'><i class='fa-solid fa-share-nodes' id="icons"></i></a>
+          <div class='cards-img-wrapper'>
+            <img src='images/homePage/pizza-6.jpg' alt='home' />
+            <div class='icons'>
+              <i class='fa-solid fa-heart'></i>
+              <i class='fa-solid fa-share-nodes'></i>
+            </div>
           </div>
-          <div class='boxes'>
-            <img src='images/homePage/pizza-6.jpg' alt='image' />
-            <a href='#'><i class='fa-solid fa-heart'id="icons"></i></a>
-            <a href='#'><i class='fa-solid fa-share-nodes'id="icons"></i></a>
+          <div class='cards-img-wrapper'>
+            <img src='images/homePage/pizza-7.jpg' alt='home' />
+            <div class='icons'>
+              <i class='fa-solid fa-heart'></i>
+              <i class='fa-solid fa-share-nodes'></i>
+            </div>
           </div>
-          <div class='boxes'>
-            <img src='images/homePage/pizza-6.jpg' alt='image' />
-            <a href='#'><i class='fa-solid fa-heart'id="icons"></i></a>
-            <a href='#'><i class='fa-solid fa-share-nodes'id="icons"></i></a>
+          <div class='cards-img-wrapper'>
+            <img src='images/homePage/pizza-8.jpg' alt='home' />
+            <div class='icons'>
+              <i id ="heart" class='fa-solid fa-heart'></i>
+              <i id ="share" class='fa-solid fa-share-nodes'></i>
+            </div>
           </div>
-          <div class='boxes'>
-            <img src='images/homePage/pizza-6.jpg' alt='image' />
-            <a href='#'><i class='fa-solid fa-heart' id="icons"></i></a>
-            <a href='#'><i class='fa-solid fa-share-nodes' id="icons"></i></a>
+          <div class='cards-img-wrapper'>
+            <img src='images/homePage/pizza-9.jpg' alt='home' />
+            <div class='icons'>
+              <i class='fa-solid fa-heart'></i>
+              <i class='fa-solid fa-share-nodes'></i>
+            </div>
+          </div>
+          <div class='footer'>
+            <a href='#'>View more in Instagram</a>
           </div>
         </div>
       </div>
