add second page home (nearly finished 1)

--- a/src/index.html
+++ b/src/index.html
@@ -176,9 +176,9 @@
               <i class='fa-solid fa-share-nodes'></i>
             </div>
           </div>
-          <div class='footer'>
-            <a href='#'>View more in Instagram</a>
-          </div>
+        </div>
+        <div class ="footer">
+          <a href='#'>View more in Instagram</a>
         </div>
       </div>
     </script>
